# AI-Engineering-Bootcamp

./: .env.example  README.md  docker-compose.yml  dockerfile  pyproject.toml
Notebooks/BasicRAGPipeline/: BasicRAGPipeline.ipynb
Notebooks/ExploreDataset/: ExploreAmaonDataSet.ipynb
Notebooks/Prerequisites/: 01-llm-apis.ipynb
Notebooks/RAG-Pipeline/: RAG-pipeline.ipynb
Notebooks/RAGPreprocessing/: RAGPreprocessing.ipynb
apps/api/: Dockerfile  pyproject.toml
apps/api/src/api/: app.py
apps/api/src/api/agents/: retrieval_generation.py
apps/api/src/api/api/: endpoints.py  middleware.py  models.py
apps/api/src/api/core/: config.py
apps/chatbot_ui/: Dockerfile  pyproject.toml
apps/chatbot_ui/src/: app.py
src/: app.py
